More reformating the contact us form for use with "Contact Form 7" plugin. Fixed spacing for the about us page.

--- a/wp-content/plugins/wp-catalogue/includes/css/catalogue-styles.css
+++ b/wp-content/plugins/wp-catalogue/includes/css/catalogue-styles.css
@@ -280,6 +280,9 @@
 div.entry-content {
     margin-bottom: 11px;
 }
+.home div.entry-content {
+    margin-bottom:0;
+}
 #wpc-products div.category {
     margin-bottom: 11px;
     margin-top: 52px;
